--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "Receiption",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -17,20 +16,25 @@
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
     "expo-camera": "^12.1.2",
+    "expo-constants": "^13.0.2",
     "expo-device": "^4.1.1",
     "expo-font": "^10.0.5",
     "expo-image-picker": "^12.0.2",
+    "expo-secure-store": "^11.1.1",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-device-info": "^8.7.0",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-flash-message": "^0.2.1",
     "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
